--- a/autors.html
+++ b/autors.html
@@ -37,7 +37,7 @@
         <h2><b>Universidad Autonoma de Querétaro</b></h2>
         <h3>Facultad en Informatica</h3>
 
-        <p><b>Alumno:</b>Braulio Hernández Arceo</p>
+        <p><b>Alumno:</b>Braulio H. A.</p>
         <p><b>EXP:</b> 307133</p>
         <p><b>Grupo:</b> 10</p>
         <p><b>Carrera:</b> Licienciatura en Informatica</p>
@@ -51,4 +51,5 @@
         <p>© 2024 Mi Sitio Web</p>
     </footer>
 </body>
+
 </html>
